# python-config-rs

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
src/: cmdr.rs  lib.rs  main.rs  script.rs
tests/: equivalence.rs
