[package]
name = "python-config-rs"
version = "0.1.0"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
edition = "2018"
description = """
Python distribution information, similar to python-config
"""
license = "MIT OR Apache-2.0"
categories = ["development-tools::build-utils"]
keywords = ["python"]

[dependencies]
semver = "0.9"

[dev-dependencies]
assert_cmd = "0.11"

[lib]
name = "python_config"
path = "src/lib.rs"

[[bin]]
name = "python3-config"
path = "src/bin/python-config.rs"
doc = false