[package]
name = "python-config-rs"
version = "0.1.1"
authors = ["Ian McIntyre <ianpmcintyre@gmail.com>"]
repository = "https://github.com/mciantyre/python-config-rs"
edition = "2018"
description = """
Python distribution information, similar to python-config
"""
license = "MIT OR Apache-2.0"
categories = [
    "development-tools::build-utils",
    "command-line-utilities",
]
keywords = ["python"]
readme = "README.md"

[dependencies]
semver = "0.9"

[dev-dependencies]
assert_cmd = "0.11"

[lib]
name = "python_config"
path = "src/lib.rs"

[[bin]]
name = "python3-config"
path = "src/bin/python3-config.rs"
doc = false